# simple_flake_templates

./: README.md  flake.nix
cpp-template/: .gitignore  flake.nix  overlay.nix
cpp-template/template_lib/: CMakeLists.txt  devshell.nix  package.nix
cpp-template/template_lib/src/: hello.cpp
cpp_simple/: default.nix  flake.nix
